@@ -11,22 +11,23 @@
 # 2018-06-07 predictorEffects now works with offsets.
 # 2018-08-09 removed explicit 'xlevels' argument from predictorEffects, so the argument is correctly passed with ...
 # 2018-10-19: changed class of predictorefflist to c("predictorefflist", "efflist", "list")
+# 2018-11-17: added xlevels argument with default c(50, 5). J. Fox
 
 
 # removed xlevels argument 8/9/18
-predictorEffect <- function(predictor, mod, ...){  
+predictorEffect <- function(predictor, mod, xlevels=c(50, 5), ...){  
   UseMethod("predictorEffect", mod)
 }
 
 # removed xlevels argument 8/9/18
-predictorEffect.svyglm <- function(predictor, mod, ...){
+predictorEffect.svyglm <- function(predictor, mod, xlevels=c(50, 5), ...){
   mod$call <- list(mod$call, data=mod$data)
   NextMethod(object=mod, ...)
 }
 
 #simplified 12/10/17
 # removed xlevels argument 8/9/18
-predictorEffect.default <- function(predictor, mod, ...){
+predictorEffect.default <- function(predictor, mod, xlevels=c(50, 5), ...){
   form <- Effect.default(NULL, mod) #returns the fixed-effects formula
   all.vars <- all.vars(parse(text=form))
   # find the right effect to use
@@ -35,6 +36,20 @@ predictorEffect.default <- function(predictor, mod, ...){
   predictors <- all.vars(parse(text=terms))
   sel <- which(predictors == predictor)
   if(length(sel) != 1) stop("First argument must be the quoted name of one predictor in the formula")
+  xlevels <- if (is.numeric(xlevels)){
+    if (length(xlevels) == 1) xlevels
+    else if (length(xlevels) == 2) {
+      xlevs <- list()
+      xlevs[[predictor]] <- xlevels[1]
+      for (pred in predictors[-sel]){
+        xlevs[[pred]] <- xlevels[2]
+      }
+      xlevs
+    }
+    else stop("xlevels is a numeric vector with more than 2 elements")
+  } else {
+    xlevels
+  }
   # create correspondence table
   decode <- function(name) all.vars(parse(text=unlist(strsplit(name, ":"))))
   tab <- rep(FALSE, length(terms))
@@ -43,7 +58,7 @@ predictorEffect.default <- function(predictor, mod, ...){
   ans <- unique(all.vars(parse(text=ans)))
   ans <- unique(c(predictor, ans)) # guarantees focal predictor is first
   args <- names(list(...))
-  result <- if ("x.var" %in% args) Effect(ans, mod, ...) else Effect(ans, mod, x.var=1, ...)
+  result <- if ("x.var" %in% args) Effect(ans, mod, xlevels=xlevels, ...) else Effect(ans, mod, x.var=1, xlevels=xlevels, ...)
   class(result) <- c("predictoreff", class(result))
   result
 }
