@@ -14,6 +14,10 @@ Version 4.1-0
  
  o Added effectsHexsticker().
  
+ o Fixed bug in plotting partial residuals when a factor focal predictor had empty levels.
+ 
+ o predictorEffect() has a new xlevels argument with default c(50, 5), the first element for a focal numeric predictor.
+ 
  o Small fixes and improvements.
 
 Version 4.0-3
